--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-card-flip": "^1.0.6",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "~1.4.0",
